--- a/components/Users/SearchForm/SearchForm.module.css
+++ b/components/Users/SearchForm/SearchForm.module.css
@@ -19,11 +19,17 @@
 .input {
   width: 100%;
   height: 40px;
-  margin: 28px 0;
+  margin: 28px 0 10px;
   padding: 11.5px 0 11.5px 40px;
   border-radius: 20px;
   outline: none;
   border: none;
+}
+
+.inputError {
+  font-size: 10px;
+  line-height: 1.2;
+  margin-bottom: 15px;
 }
 
 .searchIcon {
