--- a/components/Users/TableOfUsers/TableOfUsers.module.css
+++ b/components/Users/TableOfUsers/TableOfUsers.module.css
@@ -2,3 +2,19 @@
   display: flex;
   flex-direction: column;
 }
+
+.noResults {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  text-align: center;
+  padding: 30px;
+}
+
+.text {
+  font-family: Arial, sans-serif;
+  font-size: 16px;
+  line-height: 24px;
+  color: rgb(112, 112, 112);
+  padding-left: 10px;
+}
